# dev-disp

./: .gitignore  Cargo.toml  README.md  context.dio  dev-disp.code-workspace  nx.json  package-lock.json  package.json  pubspec.yaml  tsconfig.base.json
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: devtools.json  vs_code.json
apps/dev-disp-android/: pubspec.yaml
apps/dev-disp-control/: Cargo.toml  project.json
apps/dev-disp-control/src/: application.rs  backend.rs  main.rs  util.rs
apps/dev-disp-control/src/api/: mod.rs
apps/dev-disp-control/src/api/builtin/: mod.rs
apps/dev-disp-control/src/api/grpc/: grpc_api_factory.rs  mod.rs
apps/dev-disp-control/src/backend/: api_factory.rs  backend_messages.rs  backend_ref.rs  backend_state.rs  disconnectable_api.rs  mod.rs  run_backend.rs
apps/dev-disp-control/src/widgets/: code_text.rs  device_info.rs  label.rs  mod.rs
apps/dev-disp-server/: Cargo.toml  build.rs  project.json
apps/dev-disp-server/proto/: service.proto
apps/dev-disp-server/src/: device_recruiter.rs  main.rs  util.rs  websocket.rs
apps/dev-disp-server/src/api/: api.rs  grpc_api.rs  json_over_pipe_api.rs  mod.rs  util.rs
apps/dev-disp-server/src/api/grpc/: endpoint.rs  mod.rs  proto.rs  server.rs
apps/dev-disp-server/src/app/: accept_all.rs  app.rs  mod.rs  sammy_implementation.rs
apps/dev_disp_client/: README.md  flutter_rust_bridge.yaml  project.json  pubspec.yaml
apps/dev_disp_client/android/app/: build.gradle.kts
apps/dev_disp_client/integration_test/: simple_test.dart
apps/dev_disp_client/ios/Runner/: Info.plist
apps/dev_disp_client/ios/Runner.xcodeproj/: project.pbxproj
apps/dev_disp_client/lib/: main.dart  usb_service.dart
apps/dev_disp_client/linux/runner/: my_application.cc
apps/dev_disp_client/rust_builder/: pubspec.yaml
apps/dev_disp_client/rust_builder/android/: build.gradle  settings.gradle
apps/dev_disp_client/rust_builder/ios/: rust_lib_flutter_boundgen.podspec
apps/dev_disp_client/rust_builder/linux/: CMakeLists.txt
apps/dev_disp_client/rust_builder/macos/: rust_lib_flutter_boundgen.podspec
apps/dev_disp_client/rust_builder/windows/: CMakeLists.txt
apps/dev_disp_client/web/: index.html  manifest.json
apps/dev_disp_client/windows/: CMakeLists.txt
apps/dev_disp_client/windows/flutter/: generated_plugins.cmake
apps/dev_disp_client/windows/runner/: Runner.rc  main.cpp
apps/flutter_boundgen/: flutter_rust_bridge.yaml  pubspec.yaml
apps/flutter_boundgen/android/app/: build.gradle.kts
apps/flutter_boundgen/ios/Runner/: Info.plist
apps/flutter_boundgen/lib/: main.dart  usb_service.dart
apps/flutter_boundgen/linux/: CMakeLists.txt
apps/flutter_boundgen/linux/flutter/: generated_plugins.cmake
apps/flutter_boundgen/linux/runner/: my_application.cc
apps/flutter_boundgen/macos/Runner.xcodeproj/: project.pbxproj
apps/flutter_boundgen/rust_builder/android/: build.gradle
apps/flutter_boundgen/rust_builder/linux/: CMakeLists.txt
apps/flutter_boundgen/web/: manifest.json
apps/web-testpage/: jest.config.ts  project.json
apps/web-testpage/src/: index.html  styles.scss
libs/dev-disp-api/: Cargo.toml  build.rs  project.json
libs/dev-disp-api/src/: lib.rs
libs/dev-disp-api/src/grpc/: client.rs  dev-disp.proto  endpoint.rs  mod.rs  proto.rs  server.rs
libs/dev-disp-api/src/json/: mod.rs
libs/dev-disp-client-lib/: Cargo.toml
libs/dev-disp-client-lib/src/: frb_generated.rs
libs/dev-disp-client-lib/src/api/: simple.rs
libs/dev-disp-comm/: Cargo.toml  project.json
libs/dev-disp-comm-usb/: Cargo.toml
libs/dev-disp-comm-usb/src/: discovery.rs  lib.rs  protocol.rs  transport.rs
libs/dev-disp-comm-usb/src/strategies/: android_accessory.rs  mod.rs
libs/dev-disp-comm-usb/src/strategies/android_aoa/: android_accessory.rs  mod.rs  transport.rs
libs/dev-disp-comm/src/: protocol.rs
libs/dev-disp-comm/src/messages/: get_display_info.rs
libs/dev-disp-comm/src/usb/: discovery.rs  mod.rs
libs/dev-disp-comm/src/usb/strategies/android_aoa/: android_accessory.rs  mod.rs  transport.rs
libs/dev-disp-comm/src/websocket/: client.rs  discovery.rs  messages.rs  mod.rs  transport.rs  ws_transport.rs
libs/dev-disp-core/: Cargo.toml  project.json
libs/dev-disp-core/src/: lib.rs  util.rs
libs/dev-disp-core/src/client/: client.rs  mod.rs  transport.rs
libs/dev-disp-core/src/core/: client_event_stream.rs  configuration_file.rs  controller.rs  get_device.rs  handle_client.rs  message.rs  mod.rs
libs/dev-disp-core/src/daemon/: api.rs  endpoint.rs
libs/dev-disp-core/src/host/: device_discovery.rs  encoder.rs  mod.rs  screen_provider.rs
libs/dev-disp-encoders/: Cargo.toml
libs/dev-disp-encoders/src/: lib.rs  util.rs
libs/dev-disp-encoders/src/ffmpeg/: config_file.rs  configurations.rs  ffmpeg_encoder.rs  mod.rs
libs/dev-disp-encoders/src/hevc/: configurations.rs  hevc_encoder.rs  mod.rs
libs/dev-disp-flutter-bindgen/: Cargo.toml
libs/dev-disp-flutter-bindgen/src/: frb_generated.rs
libs/dev-disp-flutter-bindgen/src/api/: simple.rs
libs/dev-disp-flutter-lib/: Cargo.toml
libs/dev-disp-flutter-lib/src/api/: simple.rs
libs/dev-disp-provider-evdi/: Cargo.toml  project.json
libs/dev-disp-provider-evdi/src/: edid.rs  evdi_screen_provider.rs  lib.rs  util.rs
libs/dev-disp-transports/: Cargo.toml  project.json
libs/dev-disp-transports/src/: lib.rs
libs/dev-disp-usb-proto-android/: Cargo.toml
libs/dev-disp-ws-js/: Cargo.toml  project.json
libs/dev-disp-ws-js/src/: client.rs  handlers.rs  lib.rs  types.rs  util.rs
libs/edid/: Cargo.toml
libs/edid/src/: edid.rs  edid_builder.rs  lib.rs
libs/pender/: Cargo.toml
libs/rust-util/: Cargo.toml
libs/rust-util/src/: computed_cell.rs  latest_value_sink.rs  lib.rs  thread_future.rs
libs/thread-future/: Cargo.toml  README.md
libs/thread-future/src/: lib.rs  thread_future.rs
libs/web-decoders/: README.md  jest.config.ts  package.json  project.json  tsconfig.lib.json
libs/web-decoders/src/: index.ts  util.ts
libs/web-util/: README.md  project.json  tsconfig.lib.json
(+65 files in other folders)
