[package]
name = "dev-disp-server"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
env_logger = "0.11.8"
evdi = "0.8.0"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["full", "signal"] }
dev-disp-core = { path = "../../libs/dev-disp-core" }
dev-disp-comm = { path = "../../libs/dev-disp-comm" }
dev-disp-provider-evdi = { path = "../../libs/dev-disp-provider-evdi" }
dev-disp-encoders = { path = "../../libs/dev-disp-encoders" }
rust-util = { path = "../../libs/rust-util" }
futures-util = "0.3.31"
tokio-util = { version = "0.7.17", features = ["compat"] }
tokio-stream = "0.1.18"
thiserror = "2.0.17"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tonic = "0.14.2"
prost = "0.14.3"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
