[package]
name = "dev_disp_client_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
dev-disp-comm = { path = "../dev-disp-comm", default-features = false }
anyhow = "1.0"
log = "0.4"
once_cell = "1.21.3"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
