[package]
name = "dev-disp-comm"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.28"
dev-disp-core = { path = "../../libs/dev-disp-core" }
nusb = { version = "0.2.0", features = ["tokio"] }
thiserror = "2.0.16"
futures-util = { version = "0.3.31", features = ["sink"] }
futures-timer = "3.0.3"
bincode = { version = "2.0.1" }
serde = { version = "1.0.228", features = ["serde_derive"] }


[features]
default = ["usb", "usb-host", "ws", "ws-host"]
usb = []
usb-host = []
ws = []
ws-host = []
