[package]
name = "dev-disp-encoders"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = { version = "8.0.0", default-features = false, features = ["codec", "format", "software-resampling", "software-scaling"] }
dev-disp-core = { path = "../dev-disp-core" }
futures-core = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
futures = { version = "0.3.31", default-features = false, features = [
  "alloc",
  "async-await",
  "std",
] }
log = "0.4.28"
