[package]
name = "dev-disp-encoders"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = { version = "8.0.0", default-features = false, features = [
  "codec",
  "format",
  "software-scaling",
] }
dev-disp-core = { path = "../dev-disp-core" }
futures-core = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
futures = { version = "0.3.31", default-features = false, features = [
  "alloc",
  "async-await",
  "std",
] }
log = "0.4.28"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
json-strip-comments = "3.1.0"
