[package]
name = "rust_lib_flutter_boundgen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
dev-disp-usb-proto-android = { path = "../dev-disp-usb-proto-android" }
anyhow = "1.0"
log = "0.4"
once_cell = "1.21.3"

# [dev-dependencies]
# freezd = ">=1.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
