[package]
name = "dev-disp-provider-evdi"
version = "0.1.0"
edition = "2024"

[dependencies]
evdi = "0.7.3"
dev-disp-core = { path = "../dev-disp-core" }
futures-util = { version = "0.3.31", features = ["sink"] }
futures-timer = "3.0.3"
log = "0.4.28"
thiserror = "2.0.16"
futures-core = "0.3.31"
futures = "0.3.31"
