[package]
name = "dev-disp-provider-evdi"
version = "0.1.0"
edition = "2024"

[dependencies]
evdi = { git = "https://github.com/AadamZ5/evdi-rs", rev = "e1313e0" }
dev-disp-core = { path = "../dev-disp-core" }
rust-util = { path = "../rust-util" }
edid = { path = "../edid" }
futures-util = { version = "0.3.31", features = ["sink"] }
futures-timer = "3.0.3"
log = "0.4.28"
thiserror = "2.0.16"
futures-core = "0.3.31"
futures = "0.3.31"
drm-fourcc = "2.2.0"
