[package]
name = "dev-disp-ws-js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dev-disp-comm = { path = "../../libs/dev-disp-comm", features = [
  "ws",
  "wasm",
], default-features = false }
futures = "0.3.31"
js-sys = "0.3.82"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify = { version = "0.5.6", default-features = false, features = ["js"] }
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = ["console"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
